# grpc-java-bazel-minimal

./: .bazelrc  .gitignore  README.md  WORKSPACE.bazel
src/main/java/io/grpc/examples/helloworld/: BUILD.bazel  HelloWorldServer.java
src/main/proto/: BUILD.bazel
